--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <p>Here we go!!!</p>
-<img src="https://github.com/CZavos/images/blob/main/Gram%20-%20Xmas.jpg?raw=true" alt = "Gram" width="420" height="315">
+<img src="https://github.com/CZavos/images/blob/main/Gram%20Henry%20Zavos%20-%20Currium.JPG?raw=true" alt = "Gram" width="420" height="315">
 <video width="440" height="352" controls>
 <source src="https://github.com/CZavos/images/blob/a989fa666d8e40d0b6c761d082af193d43f4afab/B2T%20-%20June%2010%2C%202024%20-%202.mp4?raw=true">
 Your browser does not support the video tag.
